--- a/Makefile.local
+++ b/Makefile.local
@@ -12,6 +12,8 @@
 # ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 # OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 
+## Oasis targets
+
 setup-clean: clean distclean
 	oasis setup-clean
 	$(RM) setup.* _tags configure myocamlbuild.ml
@@ -22,12 +24,12 @@ setup.ml: _oasis
 
 setup: setup.ml setup.data
 
+## Mirage targets
 
 clean:
 	$(SETUP) -clean $(CLEANFLAGS)
 	[ -r bin/Makefile ] && mirage clean bin/config.ml
 	$(RM) log
-
 
 lib: build reinstall
 	[ ! -r bin/Makefile ] && mirage configure --no-depext bin/config.ml || true
@@ -39,3 +41,23 @@ configure:
 tftpd:
 	[ ! -r bin/Makefile ] && mirage configure --no-depext bin/config.ml || true
 	mirage build bin/config.ml
+
+## Documentation
+
+doc/html/.git:
+	mkdir -p doc/html
+	cd doc/html && ( \
+		git init && \
+		git remote add origin git@github.com:mor1/ocaml-tftp.git && \
+		git checkout -B gh-pages \
+	)
+
+gh-pages: doc/html/.git
+	cd doc/html && git checkout -B gh-pages
+	rm -f doc/html/*
+	cp tftp.docdir/* doc/html/
+	cd doc/html && ( \
+		git add * && \
+		git commit -a -m "Documentation updates" && \
+		git push origin gh-pages \
+	)
