--- a/Makefile.local
+++ b/Makefile.local
@@ -75,8 +75,9 @@ release:
 	git push upstream $(VERSION)
 
 publish:
+	OPAMYES=1 opam pin add -n .
 	opam publish prepare $(NAME).$(VERSION) $(ARCHIVE)
 
 pr:
-	opam publish submit $(NAME).$(VERSION)
-	$(RM) -r $(NAME).$(VERSION)
+	OPAMYES=1 opam pin add -n $(NAME) $(NAME).$(VERSION)
+	opam publish submit $(NAME).$(VERSION) && $(RM) -r $(NAME).$(VERSION)
