--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: c
+
 install: wget https://raw.githubusercontent.com/ocaml/ocaml-travisci-skeleton/master/.travis-opam.sh
 script: bash -ex .travis-opam.sh
+
+sudo: true
+
 env:
   global:
   - ALCOTEST_SHOW_ERRORS=1
